--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-modal": "^3.13.1",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "next": "12.1.6",
@@ -16,6 +17,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.15.1",
     "react-toastify": "^9.0.1",
     "sass": "^1.51.0"
   },
